[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art_assets/spritesheet_characters.png" type="Texture" id=2]
[ext_resource path="res://assets/art_assets/allSprites_default.png" type="Texture" id=3]
[ext_resource path="res://Healthbar.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 110, 133, 52, 43 )

[sub_resource type="CircleShape2D" id=2]
radius = 19.2528

[sub_resource type="Animation" id=3]
resource_name = "damage_flash"
length = 0.11
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "flash"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "rest"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MuzzleFlash"
length = 0.02
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "start_anim"
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 507, 539, 20, 25 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 4
collision_mask = 26
script = ExtResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 34.5, 7.25 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.25, -2.25 )
texture = SubResource( 1 )
offset = Vector2( -2.89081, 1.3351 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.22272, -0.777275 )
shape = SubResource( 2 )

[node name="Iframes" type="Timer" parent="."]
one_shot = true

[node name="Effects" type="AnimationPlayer" parent="."]
anims/damage_flash = SubResource( 3 )
anims/flash = SubResource( 4 )
anims/rest = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start_anim"
anims/MuzzleFlash = SubResource( 6 )
anims/start_anim = SubResource( 7 )

[node name="MuzzleFlash" type="Sprite" parent="."]
position = Vector2( 39.75, 8.25 )
rotation = -1.5708
texture = SubResource( 8 )

[node name="NotRotate" type="Node" parent="."]

[node name="Healthbar" parent="NotRotate" instance=ExtResource( 4 )]
margin_left = -32.25
margin_top = -37.0
margin_right = -32.25
margin_bottom = -37.0
caution_zone = 0.6
danger_zone = 0.3
[connection signal="health_updated" from="." to="NotRotate/Healthbar" method="_on_Player_health_updated"]
[connection signal="health_updated" from="." to="." method="_on_Player_health_updated"]
[connection signal="timeout" from="Iframes" to="." method="_on_Iframes_timeout"]
